<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_baseline_principal"
            android:title="@string/menuPrincipal"/>
        <item
            android:id="@+id/nav_pintor"
            android:icon="@drawable/ic_baseline_drawing"
            android:title="@string/menuPintor"/>
        <item
            android:id="@+id/nav_escultor"
            android:icon="@drawable/ic_baseline_escultura"
            android:title="@string/menuEscultor" />
        <item
            android:id="@+id/nav_cientifico"
            android:icon="@drawable/ic_baseline_ciencia"
            android:title="@string/menuCientifico"/>
        <item
            android:id="@+id/nav_inventor"
            android:icon="@drawable/ic_baseline_inventor"
            android:title="@string/menuInventor"/>
    </group>


</menu>